apps/queue/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: queue
  labels:
    name: queue
